Tweaks to cropping of thumbnails to avoid cutting off all the heads

--- a/wp-content/themes/mspflymag/assets/scss/components/_teasers.scss
+++ b/wp-content/themes/mspflymag/assets/scss/components/_teasers.scss
@@ -22,7 +22,9 @@
 
 			img {
 				width: 100%;
-				min-height: 250px;
+				object-fit: cover;
+        height: 100%;
+        object-position: 50% 20%;
 			}
 
 		}
